--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "typescript.preferences.importModuleSpecifier": "non-relative",
     "cSpell.words": [
         "commitlint",
+        "keccak",
         "nomicfoundation",
         "solcover",
         "solcoverjs",
