feat: add Crowdsale contract and CurrencyTransferLib, update DealToken and MockERC20

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,10 @@
     "typescript.preferences.importModuleSpecifier": "non-relative",
     "cSpell.words": [
         "commitlint",
+        "Crowdsale",
         "keccak",
         "nomicfoundation",
+        "Reentrancy",
         "solcover",
         "solcoverjs",
         "solhint",
